# codescribe

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  codescribe-catalog.xml  codescribe.glade
docs/: Makefile.am
lib/: Makefile.am  document.vala  menubar.vala  notebook.vala  statusbar.vala  toolbar.vala  view.vala  window.vala
src/: Makefile.am  main.vala
